zeit.cms changes
================

1.2.1 (unreleased)
------------------

1.2 (2008-10-01)
----------------

- Konzept des »Redaktionellen Inhalts« zur Unterscheidung verschiedener
  Workflows.
- Ordner können nicht mehr veröffentlich oder zurückgezogen werden.
- Channel, File, Portraitbox und Text sind jetzt Assets.
- Bilder gehen jetzt sinnvoll mit Arbeitsspeicher um (Bug #4410).
- Abhängiges Veröffentlichen: Wenn eine Bildergalerie veröffentlicht wird, wird
  ihr angehänger Bilderordner automatisch mitveröffentlicht. Beim Zurückziehen
  wird der Bilderordner auch entfernt.


1.1.11 (2008-09-18)
-------------------

- Wenn ein Bild von einem Artikel entfernt wird, wird dies jetzt auch im
  Channel reflektiert.
- Die Ausgabenummer ist generell kein Pflichtfeld mehr (Bug #4458).

1.1.10 (2008-09-16)
-------------------

- Zuweisen von Keywords sorgte im FF3 für Fehler.
- Scrollbar bei der R/O-Ansicht des Quelltexts (bug #4459).
- Syntax-Highliting in der R/O-Ansicht des Quelltexts.
- XML-Export der Standardeinstellungen für Jahr/Ausgabe (für Video-DB).

1.1.9 (2008-09-05)
------------------

- Die Größe und Skalierungsart (mit/ohne Boundingbox) der Thumbnails (für
  Bigas) ist jetzt konfigurierbar.
- Hit-Counter kommt jetzt besser mit Pfaden ala //index klar.
- XML-Editor: Styling-Fixes

1.1.8 (2008-08-28)
------------------

- Readonly-Ansicht für den Quelltext (Bug #4358).

1.1.7 (2008-08-26)
------------------

- Styling in  der Dateiliste korrigiert.

1.1.6 (2008-08-26)
------------------

- Asset-View: Read-Only-Ansicht zeigt jetzt die URL an, der Title wird als
  Tool-Tip angezeigt (bug #4219).
- Ressort muss jetzt vom Benutzer eingegeben werden, »Deutschland« ist nicht
  mehr vorausgewählt (bug #4387).
- Aussetzer um kurz nach Mitternacht behoben.
- Dateiliste zeigt mehr Informationen zum Workflow-Zustand.
- Widget zum referenzieren von Objekten zeigt Informationen zum
  Workflow-Zustand.

1.1.5 (2008-08-12)
------------------
